[tool.poetry]
name = "vehicle-listener"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
vehicle-listener = "vehicle_listener.scripts.vehicle_listener:main"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
jsonschema = "^4.1.2"
motor = "^2.5.1"
pymongo = {extras = ["srv", "tls"], version = "^3.12.1"}
aiohttp-jinja2 = "^1.5"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
